--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+.idea/*
+build/*
+gradle/*
 # Generated files
 .idea/**/contentModel.xml
 
