--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,14 @@
 .idea/**/dictionaries
 .idea/**/shelf
 .idea/*
+.idea
 build/*
+build
 .gradle/*
+.gradle
 gradle/*
+gradle
+
 # Generated files
 .idea/**/contentModel.xml
 
